tests/negative/throw_extra_value.spk
; throw carries at most one value; a second raises VALUE_EXCEPTION.
(throw MY_ERROR 1 2)
